Time: 2 ms (82.86%) | Memory: 44.9 MB (20.08%) - LeetSync